tests/baselines/reference/privateIdentifierChain.1.errors.txt
tests/cases/conformance/expressions/optionalChaining/privateIdentifierChain/privateIdentifierChain.1.ts(9,9): error TS2532: Object is possibly 'undefined'.


==== tests/cases/conformance/expressions/optionalChaining/privateIdentifierChain/privateIdentifierChain.1.ts (1 errors) ====
    class A {
        a?: A
        #b?: A;
        getA(): A {
            return new A();
        }
        constructor() {
            this?.#b;
            this?.a.#b;         // Error
            ~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
            this?.getA().#b;
        }
    }
    